syntax = "proto3";

package order_service;
option go_package = "github.com/KonnorFrik/BinaryTentacles";

import "order_status.proto";

message OrderStatusResponse {
    OrderStatus status = 1;
}
