syntax = "proto3";

package order_service;
option go_package = "github.com/KonnorFrik/BinaryTentacles";

message OrderUpdatesRequest {
    string order_id = 1;
    string user_id = 2;
    int64 delay_ms = 3;
}
